--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@heroui/react": "^2.8.1",
     "@heroui/system": "^2.4.19",
     "@heroui/theme": "^2.4.19",
+    "@prisma/client": "^6.12.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@tabler/icons-react": "^3.34.1",
     "dotenv": "^17.2.0",
-    "drizzle-orm": "^0.44.3",
     "framer-motion": "^12.23.7",
     "next": "15.4.3",
     "next-auth": "^5.0.0-beta.29",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
-    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.0.8"
@@ -31,15 +31,14 @@
     "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
-    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "typescript": "^5"
